After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660453 - Shouldn't display "Device Setup Failed" in the wizard steps summary
Shouldn't display "Device Setup Failed" in the wizard steps summary
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: wizard
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
: 664346 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-09-29 12:04 UTC by Sebastien Bacher
Modified: 2012-01-18 14:46 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastien Bacher 2011-09-29 12:04:59 UTC
Using GNOME 3.2 with gnome-bluetooth 3.2.0, run bluetooth-wizard and look at the gtkassistant steps on the left, there is a "Device Setup Failed" page listed, that one is not of the steps in normal use and should probably not be there...
Comment 1 Bastien Nocera 2011-11-19 13:06:09 UTC
*** Bug 664346 has been marked as a duplicate of this bug. ***
Comment 2 Bastien Nocera 2012-01-18 14:46:38 UTC
Fixed in gnome-3-2 and master

commit ef008a79d0f09f957f2333675b415e98ea2da7ec
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Jan 18 14:39:30 2012 +0000

    wizard: Don't display "Device Setup Failed" in sidebar
    
    Seeing as the page names are now visible before we get to the
    page, we should try as hard as possible to not show this
    sort of page in the UI.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=660453
    
    Conflicts:
    
        wizard/main.c