wizard: Don't display "Device Setup Failed" in sidebar

Seeing as the page names are now visible before we get to the
page, we should try as hard as possible to not show this
sort of page in the UI.

https://bugzilla.gnome.org/show_bug.cgi?id=660453